# officialWebsite

./: .all-contributorsrc  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile  LICENSE  Pipfile  README.md  ansible.cfg  ansible.enc  ansible.gpg  ansible_hosts  asset-manifest.json  config-overrides.js  db.sqlite3  dev.Dockerfile  docker-compose.yml  dsc_tiet.enc  index.html  manage.py  netlify.toml  package-lock.json  package.json  precache-manifest.bc4714c5eee83763ac5685eed1e465f6.js  pyproject.toml  requirements.txt  run.sh  service-worker.js  setup.cfg  ubuntu.enc
.github/: config.yml  dependabot.yml  pull_request_template.md
DSC Design/: DSCwebsite.xd
DSCBackend/: settings.py  urls.py  views.py
Frontend/: README.md  package-lock.json  package.json
achievement/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
automatedSetup/: README.md  ansible  ansible.cfg  ansible_hosts
client/: .gitignore  package-lock.json  package.json
contact/: admin.py  models.py  serializers.py  urls.py
deploy/: deploy.config.js  production.config.js  ubuntu.enc
events/: admin.py  models.py  serializers.py  views.py
faq/: admin.py  models.py  serializers.py  views.py
members/: admin.py  models.py  serializers.py  views.py
playbooks/: deploy.yml  redeploy.yml
projects/: forms.py  models.py  serializers.py  urls.py  views.py
public/: chatbot.js  index.html  manifest.json
sponsor/: serializers.py  views.py
src/: App.js  Button.js  (+3 more)
(+381 files in other folders)
